--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@
     background: rgba(255, 255, 255, 0.8);
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
     text-align: center;
-    position: fixed; left: 0;
-    left:30px;
+    position: auto;
 }
 
 
@@ -62,8 +61,7 @@
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
             max-height: 400px;
             overflow-y: auto;
-            position: fixed; right: 0;
-            right:30px;
+            position: auto;
         }
 
         button {
