--- a/index.html
+++ b/index.html
@@ -168,6 +168,7 @@
     <button id="startBtn">Start Position</button>
     <button id="clearBtn">Clear Board</button>
     <button id="stopAIBtn">Stop AI</button>
+    <footer><hr>Made by Anirudh MK ©</footer>
     <script>
         let board, game, moves = [], currentMoveIndex = 0, selectedSquare, stopAI = false;
 
