--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     align-items: flex-start;
     gap: 20px;
     margin: 20px auto;
-    max-width: 1000px; 
+    max-width: 1000px;
 }
 
 #info {
@@ -167,6 +167,7 @@
     <button id="restartBtn">Restart Game</button>
     <button id="startBtn">Start Position</button>
     <button id="clearBtn">Clear Board</button>
+    <button id="stopAIBtn">Stop AI</button>
     <button id="stopAIBtn">Stop Playing</button>
     <footer><hr>Made by Anirudh MK ©</footer>
     <script>
@@ -198,49 +199,34 @@
     }
     updateMoveHistory();
     checkGameStatus();
+    board.position(game.fen());
+    if (!game.game_over() && game.turn() === 'b' && !stopAI) setTimeout(makeBestMove, 500);
     board.position(game.fen()); 
-    if (!game.game_over() && game.turn() === 'b' && !stopAI) setTimeout(makeBestMove, 500); 
-
-    document.querySelectorAll('.highlight').forEach(el => el.classList.remove('highlight'));
+document.querySelectorAll('.highlight').forEach(el => el.classList.remove('highlight'));
 }
-        function renderPromotionUI() {
+let promotionPiece = ''; 
+function choosePromotion(piece) {
+    promotionPiece = piece;  
+    document.getElementById('promotion-options').style.display = 'none'; 
+    const move = game.move({ from: selectedSquare, to: lastSquare, promotion: promotionPiece });
+    board.position(game.fen()); 
+function handlePromotion() {
+    const promotionDiv = document.getElementById('promotion-options');
+    promotionDiv.style.display = 'block'; 
+
+}
+function renderPromotionUI() {
     const promotionHTML = `
         <div id="promotion-options" style="display: none; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); background: white; padding: 10px; border: 1px solid black;">
-            <button id="q" onclick="choosePromotion('q')">Queen</button>
-            <button id="r" onclick="choosePromotion('r')">Rook</button>
-            <button id="b" onclick="choosePromotion('b')">Bishop</button>
-            <button id="n" onclick="choosePromotion('n')">Knight</button>
+            <button onclick="choosePromotion('q')">Queen</button>
+            <button onclick="choosePromotion('r')">Rook</button>
+            <button onclick="choosePromotion('b')">Bishop</button>
+            <button onclick="choosePromotion('n')">Knight</button>
         </div>
     `;
     document.body.insertAdjacentHTML('beforeend', promotionHTML);
 }
-let promotionPiece = ' ';
-function choosePromotion(piece) {
-    promotionPiece = piece;  
-        renderPromotionUI();
-    document.getElementById('promotion-options').style.display = 'none'; 
-    if document.getElementById('q') click() {
-        promotionPiece = 'q'
-    }
-        if document.getElementById('r') click() {
-        promotionPiece = 'r'
-    }
-        if document.getElementById('b') click() {
-        promotionPiece = 'b'
-    }
-        if document.getElementById('n') click() {
-        promotionPiece = 'n'
-    }
-
-    const move = game.move({ from: selectedSquare, to: lastSquare, promotion: promotionPiece });
-    board.position(game.fen());  
-}
-function handlePromotion() {
-    const promotionDiv = document.getElementById('promotion-options');
-    promotionDiv.style.display = 'block'; 
-}
-
-
+renderPromotionUI();
 function onSquareClick(square) {
     if (selectedSquare) {
         const move = game.move({ from: selectedSquare, to: square, promotion: promotionPiece });
@@ -316,7 +302,7 @@ function onSquareClick(square) {
             updateMoveHistory();
         });
 
-        
+
 async function analyzeWithStockfish() {
     const fen = game.fen();
     const url = `https://stockfish.online/api/s/v2.php?fen=${encodeURIComponent(fen)}&depth=15`;
@@ -343,7 +329,7 @@ async function analyzeWithStockfish() {
 function highlightMove(from, to) {
     const fromSquare = document.querySelector(`.square-${from}`);
     const toSquare = document.querySelector(`.square-${to}`);
-    
+
     if (fromSquare) fromSquare.classList.add('highlight');
     if (toSquare) toSquare.classList.add('highlight');
     }
