--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     align-items: flex-start;
     gap: 20px;
     margin: 20px auto;
-    max-width: 1000px;
+    max-width: 1000px; /* Adjusted for better spacing */
 }
 
 #info {
@@ -168,7 +168,6 @@
     <button id="startBtn">Start Position</button>
     <button id="clearBtn">Clear Board</button>
     <button id="stopAIBtn">Stop AI</button>
-    <button id="stopAIBtn">Stop Playing</button>
     <footer><hr>Made by Anirudh MK ©</footer>
     <script>
         let board, game, moves = [], currentMoveIndex = 0, selectedSquare, stopAI = false;
@@ -195,25 +194,27 @@
             let move = game.move({ from: source, to: target, promotion: promotionPiece });
     if (move === null) return 'snapback';
     if (move.promotion) {
-        handlePromotion(); 
+        handlePromotion();  // Show the promotion options UI
     }
     updateMoveHistory();
     checkGameStatus();
-    board.position(game.fen());
-    if (!game.game_over() && game.turn() === 'b' && !stopAI) setTimeout(makeBestMove, 500);
-    board.position(game.fen()); 
-document.querySelectorAll('.highlight').forEach(el => el.classList.remove('highlight'));
-}
-let promotionPiece = 'q'; 
-function choosePromotion(piece) {
-    promotionPiece = piece;  
-    document.getElementById('promotion-options').style.display = 'none'; 
-    const move = game.move({ from: selectedSquare, to: lastSquare, promotion: promotionPiece });
-    board.position(game.fen()); 
-function handlePromotion() {
-    const promotionDiv = document.getElementById('promotion-options');
-    promotionDiv.style.display = 'block'; 
+    board.position(game.fen()); //update the board after the move.
+    if (!game.game_over() && game.turn() === 'b' && !stopAI) setTimeout(makeBestMove, 500); // Only make the AI move if stopAI is false.
 
+    document.querySelectorAll('.highlight').forEach(el => el.classList.remove('highlight'));
+}
+let promotionPiece = 'q'; // Default to Queen
+function choosePromotion(piece) {
+    promotionPiece = piece;  // Set the promotion piece
+    document.getElementById('promotion-options').style.display = 'none'; // Hide the promotion options
+    // Now make the move with the chosen promotion piece
+    const move = game.move({ from: selectedSquare, to: lastSquare, promotion: promotionPiece });
+    board.position(game.fen());  // Update the board position
+}
+function handlePromotion() {
+    // Display promotion options when a pawn reaches the last rank
+    const promotionDiv = document.getElementById('promotion-options');
+    promotionDiv.style.display = 'block'; // Show the promotion options UI
 }
 function renderPromotionUI() {
     const promotionHTML = `
@@ -244,7 +245,7 @@ function onSquareClick(square) {
         updateMoveHistory();
         removeHighlighting();
         selectedSquare = null;
-        if (!game.game_over() && game.turn() === 'b' && !stopAI) setTimeout(makeBestMove, 500); 
+        if (!game.game_over() && game.turn() === 'b' && !stopAI) setTimeout(makeBestMove, 500); // Only make the AI move if stopAI is false.
     } else {
         if (game.get(square)) {
             selectedSquare = square;
@@ -302,7 +303,7 @@ function onSquareClick(square) {
             updateMoveHistory();
         });
 
-
+        
 async function analyzeWithStockfish() {
     const fen = game.fen();
     const url = `https://stockfish.online/api/s/v2.php?fen=${encodeURIComponent(fen)}&depth=15`;
@@ -313,6 +314,7 @@ async function analyzeWithStockfish() {
         if (data.success && data.bestmove) {
             const bestMove = data.bestmove.split(" ")[1];
             if (bestMove.length === 4) {
+                // Highlight the best move
                 highlightMove(bestMove.substring(0, 2), bestMove.substring(2, 4));
             }
             document.getElementById("best-move").innerText = `Best Move: ${bestMove} (Eval: ${data.evaluation})`;
@@ -329,7 +331,7 @@ async function analyzeWithStockfish() {
 function highlightMove(from, to) {
     const fromSquare = document.querySelector(`.square-${from}`);
     const toSquare = document.querySelector(`.square-${to}`);
-
+    
     if (fromSquare) fromSquare.classList.add('highlight');
     if (toSquare) toSquare.classList.add('highlight');
     }
@@ -548,16 +550,15 @@ function highlightMove(from, to) {
             }
         }
 
-function navigateMoves(direction) {
-    currentMoveIndex += direction;
-    if (currentMoveIndex < 0) currentMoveIndex = 0;
-    if (currentMoveIndex > moves.length) currentMoveIndex = moves.length;
-    game.reset();
-    for (let i = 0; i < currentMoveIndex; i++) game.move(moves[i].san);
-    board.position(game.fen());
-    updateMoveHistory(); 
-    analyzeCurrentMove();
-}
+        function navigateMoves(direction) {
+            currentMoveIndex += direction;
+            if (currentMoveIndex < 0) currentMoveIndex = 0;
+            if (currentMoveIndex > moves.length) currentMoveIndex = moves.length;
+            game.reset();
+            for (let i = 0; i < currentMoveIndex; i++) game.move(moves[i].san);
+            board.position(game.fen());
+            analyzeCurrentMove();
+        }
     </script>
 </body>
 </html>
